# gadget

./: .gitignore  LICENSE  README.md  gadget.py  pyproject.toml
.github/workflows/: publish-pypi.yml  tests.yml
tests/: test_gadget.py
