[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gadget-timer"
version = "0.1.0"
description = "Tiny timing helper for printing elapsed times with call-site context"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Sam Maddrell-Mander" }
]
license = { text = "MIT" }
keywords = ["timing", "debugging", "profiling", "logging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/s-maddrellmander/gadget"
Repository = "https://github.com/s-maddrellmander/gadget"
Issues = "https://github.com/s-maddrellmander/gadget/issues"

[project.optional-dependencies]
mem = [
  "psutil>=5.9"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[tool.setuptools]
py-modules = ["gadget"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=gadget --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["gadget"]

[tool.coverage.report]
show_missing = true
fail_under = 100
